--- a/style.css
+++ b/style.css
@@ -1,19 +1,33 @@
-body{
+body {
     margin: 0;
     font-family: 'Exo 2', sans-serif;
 }
 
-.one{
+.one {
     background-image: url(banner.jpg);
     height: 500px;
     background-size: cover;
     background-position: 50% 50%;
 }
-.one{
+
+.one {
     color: aliceblue;
-padding-top: 50px;
+    padding-top: 50px;
 }
-img{
+
+img {
     width: 100%;
 }
 
+.hut {
+    color: aliceblue;
+    margin: 80px 0;
+    height: 350px;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-image: url(the-hut-bg.png);
+}
+
+.hut .row {
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.293)
